--- a/opt/etc/pdnsd.conf
+++ b/opt/etc/pdnsd.conf
@@ -82,7 +82,14 @@ server {
             8.7.198.45,
             93.46.8.89;
 	reject_policy = fail;
-	caching = off;
+    timeout = 3;
+    uptest=query;
+    interval=10m;
+    purge_cache=on;
+    edns_query=yes;
+    caching=on;
+    proxy_only = on;
+    lean_query=on;
 	exclude = ".google.com",".youtube.com",".googlevideo.com",".twitter.com",".facebook.com",".gmail.com";
 }
 
@@ -90,8 +97,14 @@ server {
 	label = "OpenDNS";
 	ip = 208.67.222.222,208.67.220.220;
 	port = 5353;
-	proxy_only = on;
-	timeout = 5;
+    timeout = 5;
+    uptest=query;
+    interval=10m;
+    purge_cache=on;
+    edns_query=yes;
+    caching=on;
+    proxy_only = on;
+    lean_query=on;
 }
 
 source {
