pdnsd.conf uptest 错误设置导致首选 DNS 失效
原 uptest=query 设置，会导致首选 DNS 在命中 fake ip 后被标记为不可用，以至于之后所有的 DNS 查询都交给了
OpenDNS，修改 uptest=none 解决了这个问题。

--- a/opt/etc/pdnsd.conf
+++ b/opt/etc/pdnsd.conf
@@ -30,7 +30,7 @@ server {
     //label="HK";
     //ip=202.60.252.9,218.102.23.228;
     timeout=3;
-    uptest=query;
+    uptest=none;
     interval=10m;
     purge_cache=off;
     edns_query=yes;
@@ -64,7 +64,7 @@ server {
     ip=208.67.222.222,208.67.220.220;
     port=5353;
     timeout=5;
-    uptest=query;
+    uptest=none;
     interval=10m;
     purge_cache=off;
     edns_query=yes;
@@ -81,7 +81,7 @@ server {
 	ip=199.91.73.222,178.79.131.110;
 	port=3389;
     timeout=5;
-    uptest=query;
+    uptest=none;
     interval=10m;
     purge_cache=off;
     edns_query=yes;
